adding in calc result div and result

--- a/public/currency.html
+++ b/public/currency.html
@@ -16,7 +16,8 @@
 	<input type="number" id="nzd" placeholder="NZD amount"><br>
 	<button onclick="calc();">Calculate!</button>
 	<br>
-	<div id="status"></div>
+    <div id="status"></div>
+    <div id="result"></div>
 </div>
 
 </body>
