--- a/public/currency.html
+++ b/public/currency.html
@@ -12,22 +12,23 @@
     <link href="https://fonts.googleapis.com/css?family=Public+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
-<div>
-    <h1>Currency Calculator</h1>
+    <div class="header">
+        <h1>Currency Calculator</h1>
+    </div>
+    <div class="container">
+        <h2>Find out how much Foreign Currency is worth in US Dollars!</h2>
+        <input type="radio" name="currName" value="NZD" id="NZD">NZD<br>
+        <input type="radio" name="currName" value="EUR" id="EUR">EUR<br>
+        <input type="radio" name="currName" value="GBP" id="GBP">GBP<br>
+        <input type="radio" name="currName" value="CAD" id="CAD">CAD<br>
+        <input type="radio" name="currName" value="AUD" id="AUD">AUD<br>
 
-    <h2>Find out how much Foreign Currency is worth in US Dollars!</h2>
-    <input type="radio" name="currName" value="NZD" id="NZD">NZD<br>
-    <input type="radio" name="currName" value="EUR" id="EUR">EUR<br>
-    <input type="radio" name="currName" value="GBP" id="GBP">GBP<br>
-    <input type="radio" name="currName" value="CAD" id="CAD">CAD<br>
-    <input type="radio" name="currName" value="AUD" id="AUD">AUD<br>
-
-	<input type="number" id="foreignCurr" placeholder="Foreign Currency Amount"><br>
-	<button onclick="calc();">Calculate!</button>
-	<br>
-    <div id="status"></div>
-    <div id="result"></div>
-</div>
+        <input type="number" cols="100" id="foreignCurr" placeholder=" Foreign Currency Amount"><br>
+        <button onclick="calc();">Calculate!</button>
+        <br>
+        <div id="status"></div>
+        <div id="result"></div>
+    </div>
 
 </body>
 </html>
