--- a/public/currency.html
+++ b/public/currency.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
+    <!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">  -->
 	<title>Currency Calculator</title>
 	<script
   src="https://code.jquery.com/jquery-3.2.1.min.js"
