changin span words

--- a/public/currency.html
+++ b/public/currency.html
@@ -28,7 +28,7 @@
         <button id="usdCalc" onclick="dollarCalc();">Calculate in USD!</button>
         <button id="gbpCalc" onclick="calc();">Calculate in GBP*</button><br>
         <br>
-        <span>*GBP is most accurate exchange rate conversion</span>
+        <span>*GBP uses current exchange rate conversion</span>
         <br><br>
         <div id="status"></div>
         <div id="result"></div><br><br>
